# http-fileserver-cpp

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Doxyfile  HACKING.md  README.md  build.sh  shell.nix
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: _default.hpp  lib.cpp  logger.hpp  main.cpp  server.cpp  server.hpp  tracelogger.cpp
test/: CMakeLists.txt
test/source/: httpfileserver_test.cpp
